# rust-web-scraper

./: Cargo.toml  rust-server.service
src/: main.rs  models.rs
