[package]
name = "rust-web-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
scraper = "0.13.0"
serde_json = "1.0.69"
serde = { version = "1.0.130", features = ["derive"] }
actix-web = "4.3.1"